--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -1897,7 +1897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1936,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1950,7 +1950,8 @@
       "Training complete for FISH with 3 states with time 0.639346494999927 seconds\n",
       "Training complete for BOOK with 13 states with time 2.7545200600000044 seconds\n",
       "Training complete for VEGETABLE with 14 states with time 1.8808596339999895 seconds\n",
-      "Training complete for FUTURE with 13 states with time 2.9701004419998753 seconds\n"
+      "Training complete for FUTURE with 13 states with time 2.9701004419998753 seconds\n",
+      "Training complete for JOHN with 14 states with time 17.782097694999948 seconds\n"
      ]
     }
    ],
@@ -1998,13 +1999,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 4 tests in 34.567s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=4 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from asl_test_model_selectors import TestSelectors\n",
     "suite = unittest.TestLoader().loadTestsFromModule(TestSelectors())\n",
