--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -2155,72 +2155,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "**** WER = 0.7471910112359551\n",
-      "Total correct: 45 out of 178\n",
-      "Video  Recognized                                                    Correct\n",
-      "=====================================================================================================\n",
-      "    2: *IX *IX *CAN                                                  JOHN WRITE HOMEWORK\n",
-      "    7: JOHN *GIVE1 *GIVE1 *GIVE1                                     JOHN CAN GO CAN\n",
-      "   12: JOHN *BOOK *NEW *WHAT                                         JOHN CAN GO CAN\n",
-      "   21: JOHN *MARY *JOHN *MARY *ARRIVE *ARRIVE *MARY *JOHN            JOHN FISH WONT EAT BUT CAN EAT CHICKEN\n",
-      "   25: JOHN *JOHN *YESTERDAY IX *JOHN                                JOHN LIKE IX IX IX\n",
-      "   28: JOHN *JOHN *JOHN IX IX                                        JOHN LIKE IX IX IX\n",
-      "   30: JOHN *JOHN *JOHN *JOHN IX                                     JOHN LIKE IX IX IX\n",
-      "   36: *JOHN *JOHN *IX IX *JOHN *JOHN                                MARY VEGETABLE KNOW IX LIKE CORN1\n",
-      "   40: *MARY IX *JOHN *JOHN *JOHN                                    JOHN IX THINK MARY LOVE\n",
-      "   43: JOHN *JOHN *CAR *WHAT                                         JOHN MUST BUY HOUSE\n",
-      "   50: *JOHN *MARY BUY CAR *WHO                                      FUTURE JOHN BUY CAR SHOULD\n",
-      "   54: JOHN *MARY *SELL BUY *WHAT                                    JOHN SHOULD NOT BUY HOUSE\n",
-      "   57: *IX *JOHN *IX *JOHN                                           JOHN DECIDE VISIT MARY\n",
-      "   67: *IX *IX *JOHN *BOOK *WHAT                                     JOHN FUTURE NOT BUY HOUSE\n",
-      "   71: JOHN *MARY *GO *WHAT                                          JOHN WILL VISIT MARY\n",
-      "   74: JOHN *IX *LIKE *JOHN                                          JOHN NOT VISIT MARY\n",
-      "   77: *JOHN *GO MARY                                                ANN BLAME MARY\n",
-      "   84: *JOHN *NEW *IX *WHAT                                          IX-1P FIND SOMETHING-ONE BOOK\n",
-      "   89: *GIVE1 IX GIVE *JOHN *JOHN *WHAT *HOUSE                       JOHN IX GIVE MAN IX NEW COAT\n",
-      "   90: JOHN *IX *JOHN *IX *JOHN *MARY                                JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
-      "   92: JOHN *IX *JOHN *IX *IX *CAR                                   JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
-      "  100: *IX *WHAT *WHAT *HOUSE                                        POSS NEW CAR BREAK-DOWN\n",
-      "  105: JOHN *JOHN                                                    JOHN LEG\n",
-      "  107: JOHN *IX *JOHN *ARRIVE *JOHN                                  JOHN POSS FRIEND HAVE CANDY\n",
-      "  108: *JOHN *BOOK                                                   WOMAN ARRIVE\n",
-      "  113: IX *ARRIVE *MARY *MARY *ARRIVE                                IX CAR BLUE SUE BUY\n",
-      "  119: *JOHN *ARRIVE *BLAME *ARRIVE *JOHN                            SUE BUY IX CAR BLUE\n",
-      "  122: JOHN *ARRIVE *MARY                                            JOHN READ BOOK\n",
-      "  139: JOHN *GIVE1 WHAT *JOHN *WHAT                                  JOHN BUY WHAT YESTERDAY BOOK\n",
-      "  142: JOHN *ARRIVE *JOHN *JOHN *MARY                                JOHN BUY YESTERDAY WHAT BOOK\n",
-      "  158: *BLAME JOHN *JOHN                                             LOVE JOHN WHO\n",
-      "  167: JOHN *SOMETHING-ONE *IX *FUTURE *VISIT                        JOHN IX SAY LOVE MARY\n",
-      "  171: JOHN *JOHN BLAME                                              JOHN MARY BLAME\n",
-      "  174: *ARRIVE *WHAT GIVE1 *MARY *CAR                                PEOPLE GROUP GIVE1 JANA TOY\n",
-      "  181: JOHN ARRIVE                                                   JOHN ARRIVE\n",
-      "  184: *THROW *JOHN *ARRIVE TEACHER *MARY                            ALL BOY GIVE TEACHER APPLE\n",
-      "  189: JOHN *IX *MARY *WHAT                                          JOHN GIVE GIRL BOX\n",
-      "  193: JOHN *IX *IX BOX                                              JOHN GIVE GIRL BOX\n",
-      "  199: *JOHN *BOOK *MARY                                             LIKE CHOCOLATE WHO\n",
-      "  201: JOHN *JOHN MARY *JOHN BUY *ARRIVE                             JOHN TELL MARY IX-1P BUY HOUSE\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#features = features_polar\n",
-    "features = features_custom\n",
-    "\n",
-    "#model_selector = SelectorBIC\n",
+    "features = features_polar\n",
     "model_selector = SelectorDIC\n",
-    "#model_selector = SelectorCV\n",
     "\n",
     "models = train_all_words(features, model_selector)\n",
     "test_set = asl.build_test(features)\n",
@@ -2500,6 +2444,15 @@
     "df_probs = pd.DataFrame(data=probabilities)\n",
     "df_probs.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
